@@ -1,4 +1,6 @@
 0.9.1
+   - bug [9511] "ESHarvester mangler unit test."
+                Removed ESHarvestTest.java from unittest
    - bug [9643] "python setup_postgres_check_fedora.py bør vise hvilken port den undersøger fedora på"
    - bug [9767] "En conditional i FedoraUtils evaluerer altid til falsk"
    - bug [9768] "Mismatch i adminData ID i fedora"
